# Nemo

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  compile_dataload.sh  compile_exp_debug.sh  compile_exp_release.sh  compile_load.sh
configs/: ifconfig_azure.txt  ifconfig_python.txt  ifconfig_redis.txt  ifconfig_tikv.txt  load_data.cfg  load_data_100m.cfg  load_data_100m_negative_large_domain_r1024.cfg  load_data_100m_negative_r1024.cfg  load_data_100m_negative_r1024_phantom.cfg  load_data_100m_r1024.cfg  load_data_100m_r128.cfg  load_data_100m_r16.cfg  load_data_100m_r256.cfg  load_data_100m_r32.cfg  load_data_100m_r512.cfg  load_data_100m_r64.cfg  load_data_10g.cfg  load_data_10g_copy.cfg  load_data_1g_negative_domain_10g.cfg  load_data_1g_negative_domain_1g.cfg  load_data_1g_negative_domain_20g.cfg  load_data_1g_negative_domain_2g.cfg  load_data_1g_negative_domain_30g.cfg  load_data_1g_negative_domain_40g.cfg  load_data_1g_negative_domain_50g.cfg  load_data_1g_negative_domain_5g.cfg  load_pages.cfg  load_pages_100m.cfg  load_pages_100m_negative_domain_200m.cfg  load_pages_10g.cfg  load_pages_10g_copy.cfg  load_pages_10m_negative_domain_20m.cfg  load_pages_1g_negative_domain_10g.cfg  load_pages_1g_negative_domain_1g.cfg  load_pages_1g_negative_domain_20g.cfg  load_pages_1g_negative_domain_2g.cfg  load_pages_1g_negative_domain_5g.cfg  load_pages_1m_negative_domain_2m.cfg  load_range_data_10g.cfg  sample.cfg  (+12 more)
debug/: gdb_debug.sh  gdb_threaddump.sh
experiments/: DebugExpNegativePoint100mR1024.py  DebugExpNegativePoint100mR1024skew.py  DebugExpNegativePoint100mR1024varybuf.py  DebugExpPointPageVaryBuf.py  DebugExpPointPageVaryBufIdxEvict.py  DebugExpPointTupleVaryBufRW.py  DebugExpPointTupleVaryBufRW100m.py  DebugExpPointTupleVaryBufRW100mMultithreadEvict.py  DebugExpPointTupleVaryBufRW100mMultithreadEvictRW.py  DebugExpPointTupleVaryBufRW100mR1024.py  DebugExpPointTupleVaryBufRW100mR16.py  DebugExpPointTupleVaryBufRW100mR256.py  DebugExpPointTupleVaryBufRW100mR32.py  DebugExpPointTupleVaryBufRW100mR64.py  DebugExpPointTupleVaryBufRW100mRecordMultithreadEvict.py  DebugExpPointTupleVaryBufRW100mRecordMultithreadRW.py  DebugExpPointTupleVaryBufRW100mSinglethreadEvict.py  DebugExpPointTupleVaryBufRW100record.py  DebugExpPointTupleVaryBufRW100recordR1024.py  DebugExpPointTupleVaryBufRW100recordR16.py  DebugExpPointTupleVaryBufRW100recordR256.py  DebugExpPointTupleVaryBufRW100recordR32.py  DebugExpPointTupleVaryBufRW100recordR64.py  DebugExpPointTupleVaryBufRWBatchEvict.py  DebugExpPointTupleVaryBufRWBatchEvict10thd.py  DebugExpPointTupleVaryBufRWRecordClock.py  DebugExpScan.py  DebugExpScanMix.py  DebugExpScanMixBonsai.py  DebugExpScanMixBonsaiDebugging.py  DebugExpScanMixBuf.py  DebugExpScanMixPCL.py  DebugExpScanMixPartitionLockBuf.py  DebugExpScanMixPartitionLockPsize.py  Exp-CDF.py  ExpMix.py  ExpPoint.py  ExpPointPage.py  ExpPointPageUniHotspot.py  ExpPointPageUniHotspotIdxEvict.py  (+80 more)
output/: exp_mix_bonsai_varying_psize_high_contention.txt  exp_mix_bonsai_varying_psize_low_contention.txt  exp_mix_bonsai_varying_working_set.txt  exp_mix_pcl_debug.txt  exp_mix_pcl_varying_psize_high_contention.txt  exp_mix_pcl_varying_psize_low_contention.txt  exp_mix_pcl_varying_working_set.txt  exp_mix_pcl_varying_working_set_debug.txt  exp_mix_scan_10g_bonsai_debug.txt  exp_mix_scan_10g_bonsai_test_demo.txt  exp_mix_scan_10g_bonsai_test_demo_zipf.txt  exp_mix_scan_partition_lock_Psize_test_demo.txt  exp_mix_scan_partition_lock_Psize_test_demo_zipf.txt  exp_negative_negative_range_100m_skew_debug-recordsz1024-buf0.3-read1-negative2.txt  exp_negative_point_100m-recordsz1024-buf1-read1-negative0.txt  exp_negative_point_100m-recordsz1024-buf1-read1-negative1.txt  exp_negative_point_100m.txt  exp_negative_point_100m_r1024.txt  exp_negative_point_100m_r1024_no_op.txt  exp_negative_point_100m_r1024_no_op_skew.txt  exp_negative_point_100m_r1024_skew.txt  exp_negative_point_100m_varybuf-recordsz1024-read1-negative1.txt  exp_negative_range_100m_skew-recordsz1024-buf0.25-read1-negative0.txt  exp_negative_range_100m_skew-recordsz1024-buf0.25-read1-negative0.txt_bk  exp_negative_range_100m_skew-recordsz1024-buf0.25-read1-negative1.txt  exp_negative_range_100m_skew-recordsz1024-buf0.25-read1-negative1.txt_bk  exp_negative_range_100m_skew-recordsz1024-buf0.25-read1-negative2.txt  exp_negative_range_100m_skew-recordsz1024-buf1-read1-negative0.txt_bk  exp_negative_range_100m_skew-recordsz1024-buf1-read1-negative1.txt_bk  exp_negative_range_cluster_large_domain_100m_vary_scanlen-recordsz1024-buf1-read1-negative0.txt  exp_negative_range_cluster_large_domain_100m_vary_scanlen-recordsz1024-buf1-read1-negative1.txt  exp_negative_range_gapbit_100m_skew-recordsz1024-buf0.3-read1-negative1.txt  exp_negative_range_gapbit_100m_skew-recordsz1024-buf0.5-read1-negative1.txt  exp_negative_range_gapbit_100m_skew-recordsz1024-buf1-read1-negative1.txt  exp_negative_range_gapphantom_100m_skew-recordsz1024-buf0.3-read1-negative0.txt  exp_negative_range_gapphantom_100m_skew-recordsz1024-buf0.5-read1-negative0.txt  exp_negative_range_gapphantom_100m_skew-recordsz1024-buf1-read1-negative0.txt  exp_negative_range_large_domain_100m_skew-recordsz1024-buf1-read1-negative0.txt  exp_negative_range_large_domain_100m_skew-recordsz1024-buf1-read1-negative1.txt  exp_negative_range_large_domain_100m_skew-recordsz1024-buf1-read1-negative2.txt  (+82 more)
plots/: Debug-Exp.ipynb  Debug-Exp1.ipynb  Exp0-ScanMix-Phantom-Demo.ipynb  Exp1-RO-VaryBufSkew.ipynb  Exp1-RO.ipynb  Exp1-RW-VaryBufSkew.ipynb  Exp1-RW.ipynb  Exp1-ScanMix-Phantom.ipynb  Exp1-TwoTree-0.5.ipynb  Exp1-TwoTree.ipynb  ExpYCSB_results.csv  Experiment 1 Analysis.ipynb  Experiment 1 Working Set, Zipfian, Read Ratio (fanout = 250) .ipynb  Experiment 1 Zipfian, Read Ratio, Working Set (fanout = 250) .ipynb  Experiment 2 Analysis.ipynb  Experiment 2 Scan (fanout = 250).ipynb  Experiment 3 Mix 5% read-intensive (fanout = 250).ipynb  Experiment 3 Mix 5% read-only (fanout = 250).ipynb  Experiment 3 YCSB-E (fanout = 250).ipynb  Experiment 3 analysis.ipynb  (+4 more)
(+277 files in other folders)
